[package]
name = "cloud_sim"
version = "0.1.0"
authors = ["levmckinney <levmckinney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.3"}
nalgebra = {version="0.23.1", features=["sparse"]}
rand = "*"